build: switch to java-library, add javadoc jar, jacoco and publishing
Compile with --release 8 instead of source/target compatibility. Plain
source/target does not check the API against Java 8, which is how a call to
List.of ended up in the test suite while the project advertises Java 8 support.
Fixed that call as part of the switch.

Other changes:
- java-library plugin, javadoc and sources jars, maven-publish configuration
- jacoco coverage report, scoped to the library package so instrumentation does
  not add a synthetic field to the test fixtures and skew the field tests
- JUnit 5.10.2 via the BOM, slf4j 2.0.13
- .gitignore no longer excludes gradle/ and gradlew.bat, so a fresh clone has a
  working wrapper on Windows; added the missing gradlew.bat
- rootProject.name corrected from reflectors to reflector